--- a/templates/agent/feature_spotlight_pdf.html
+++ b/templates/agent/feature_spotlight_pdf.html
@@ -191,8 +191,8 @@
         
         <div class="card">
             <div class="card-header">
-                <img src="https://i.postimg.cc/zB5B38Bq/KCRE-Logo.png" alt="KC Realty Experts" class="card-logo">
-                <div class="card-agent">Presented by Kayleigh Biggs</div>
+                <img src="{{ brokerage_logo }}" alt="Brokerage Logo" class="card-logo" onerror="this.style.display='none'">
+                <div class="card-agent">Presented by {{ agent_name }}</div>
             </div>
             <div class="card-content">
                 <div class="card-room">{{ feature.room }}</div>
