Add Marketing Hub to Lender Dashboard - routes and navigation complete

--- a/templates/lender/layout.html
+++ b/templates/lender/layout.html
@@ -170,11 +170,11 @@
           </li>
           <li class="ylh-submenu-item">
             <a
-              href="{{ url_for('lender_marketing') }}"
+              href="{{ url_for('lender_marketing_hub_global') }}"
               class="ylh-submenu-link {% if path.startswith('/lender/marketing') %}active{% endif %}"
             >
               <span class="ylh-submenu-bullet"></span>
-              Marketing Tools
+              Marketing Hub
             </a>
           </li>
           <li class="ylh-submenu-item">
